[package]
name = "rust-portal-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
extism = "1.8.0"
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
plugin-common = { path = "../../commons/plugin-common" }
