[package]
name = "rust-portal-api"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["full"] }
axum = "0.7.7"
extism = "1.8"
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = [
  "io-util",
  "io-std",
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
] }
tracing-subscriber = "0.3"
plugin-common = { path = "../../commons/plugin-common" }
once_cell = "1.20.2"
log = "0.4.22"
pretty_env_logger = "0.5.0"
futures = "0.3.31"
tracing = "0.1.40"
base64 = "0.22.1"
